// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading renders 1`] = `
.c0 {
  font-size: 36px;
  margin: 0px;
  font-weight: regular;
  line-height: 1.25;
}

<h2
  className="c0"
/>
`;

exports[`Heading uses <Text> component properties 1`] = `
.c0 {
  font-size: 36px;
  margin: 0px;
  color: #e42d42;
  text-align: center;
  font-weight: regular;
  line-height: 1.25;
}

<h2
  className="c0"
  color="primary"
/>
`;

exports[`Heading with default theme font size, when fontSize prop not used 1`] = `
.c0 {
  font-size: 36px;
  margin: 0px;
  font-weight: regular;
  line-height: 1.25;
}

<h2
  className="c0"
/>
`;

exports[`Heading with h1-h6 dot-notation 1`] = `
.c0 {
  font-size: 48px;
  margin: 0px;
  font-weight: bold;
  font-weight: regular;
  line-height: 1.25;
}

<h1
  className="c0"
/>
`;

exports[`Heading with h1-h6 dot-notation 2`] = `
.c0 {
  font-size: 32px;
  margin: 0px;
  font-weight: bold;
  line-height: 1.25;
}

<h2
  className="c0"
/>
`;

exports[`Heading with h1-h6 dot-notation 3`] = `
.c0 {
  font-size: 24px;
  margin: 0px;
  font-weight: bold;
  line-height: 1.25;
}

<h3
  className="c0"
/>
`;

exports[`Heading with h1-h6 dot-notation 4`] = `
.c0 {
  font-size: 20px;
  margin: 0px;
  font-weight: regular;
  line-height: 1.25;
}

<h4
  className="c0"
/>
`;

exports[`Heading with h1-h6 dot-notation 5`] = `
.c0 {
  font-size: 16px;
  margin: 0px;
  font-weight: bold;
  line-height: 1.25;
}

<h5
  className="c0"
/>
`;

exports[`Heading with h1-h6 dot-notation 6`] = `
.c0 {
  font-size: 12px;
  margin: 0px;
  text-transform: uppercase;
  font-weight: bold;
  line-height: 1.25;
}

<h6
  className="c0"
/>
`;
